Bug 170153 - FILESAVE: PPTX -> PPTX audio file saved as video
Summary: FILESAVE: PPTX -> PPTX audio file saved as video
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
26.8.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Karthik
URL:
Whiteboard: target:26.8.0 target:26.2.1
Keywords: filter:pptx
Depends on:
Blocks: Media
  Show dependency treegraph
 
Reported: 2025-12-28 15:10 UTC by Karthik
Modified: 2026-01-30 08:45 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
PPTX File (167.07 KB, application/vnd.openxmlformats-officedocument.presentationml.presentation)
2025-12-28 15:14 UTC, Karthik
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Karthik 2025-12-28 15:10:36 UTC
Description:
Open the attached PPTX file and save it as PPTX, the resulting file can't be opened in PowerPoint.

The audio in the PPTX is exported as video

audio/video is exported based on the file extension. But ".bin" extension files are not handled. So, any ".bin" file is exported as video regardless.

Steps to Reproduce:
1.Open the attached PPTX file
2.Save it as PPTX
3.Open the resulting file in PowerPoint

Actual Results:
PowerPoint fails to open the file

Expected Results:
PowerPoint opens the file without any problem


Reproducible: Always


User Profile Reset: Yes

Additional Info:
Version: 25.2.3.2 (X86_64) / LibreOffice Community
Build ID: 520(Build:2)
CPU threads: 22; OS: Linux 6.12; UI render: default; VCL: gtk3
Locale: en-IN (en_IN); UI: en-US
Debian package version: 4:25.2.3-2+deb13u2
Calc: threaded
Comment 1 Karthik 2025-12-28 15:14:06 UTC
Created attachment 204839 [details]
PPTX File
Comment 2 Commit Notification 2026-01-27 13:26:16 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/808b88b88b6e7fcddf100e473416e33d4145cfcb

tdf#170153: PPTX->PPTX handle ".bin" media file

It will be available in 26.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2026-01-30 08:45:01 UTC
Karthik Godha committed a patch related to this issue.
It has been pushed to "libreoffice-26-2":

https://git.libreoffice.org/core/commit/3e86b1256eb9038521ce12fe5a598af52ff4f91a

tdf#170153: PPTX->PPTX handle ".bin" media file

It will be available in 26.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.