tdf#170153: PPTX->PPTX handle ".bin" media file

Media files are exported based on file extensions. ".bin" file extension
is not handled.

Change-Id: Ib7af829e6a5bd042c59edcef9d09b6c5d4fb80a3
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/196267
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Michael Stahl <michael.stahl@collabora.com>